# CGAPI

./: .gitignore  CMakeLists.txt  README.md
.VSCodeCounter/2021-07-04_17-20-48/: details.md  results.csv  results.md  results.txt
experiments/JIT/: CMakeLists.txt  README.md  main.cpp  makefile  support.h
experiments/glsl_compile_toolchain/: CMakeLists.txt
experiments/glsl_compile_toolchain/include/: glsl_math.h  hello.h
experiments/glsl_compile_toolchain/src/: CMakeLists.txt  main.cpp
experiments/glsl_compile_toolchain/src/glsl_math/: CMakeLists.txt  glsl_math.cpp
experiments/glsl_compile_toolchain/src/hello/: CMakeLists.txt  hello.c
experiments/glsl_with_gcc/: README.md  code.glsl  main.cpp  makefile  outcome.txt  parse.h  shader.hpp  symbols.cpp  test.l  test.y  translate.cpp  vec_math.h
experiments/glsl_with_gcc/learn_flex_bison/: ref.txt
experiments/glsl_with_gcc/learn_flex_bison/framework/: basic.l  basic.y
experiments/glsl_with_gcc/learn_flex_bison/test0/: keyword.c  keyword.l  makefile  problem.txt
experiments/glsl_with_gcc/learn_flex_bison/test1/: lex.yy.c  makefile  problem.txt  test.l  test.y  y.tab.c  y.tab.h
experiments/glsl_with_gcc/learn_flex_bison/test2/: lex.yy.c  problem.txt  test.l  test.y  y.output  y.tab.c  y.tab.h
experiments/glsl_with_gcc/learn_flex_bison/test3/: code.glsl  main.cpp  makefile  problem.txt  symbols.cpp  symbols.h  test.l  test.y  vec_math.h
include/gl/: common.h  gl.h
include/glv/: glv.h
install/include/gl/: common.h
install/include/glv/: glv.h
notes/: Log.md  mesa drawing process.md  mesa gl_context.md
scripts/: glsl_prefix_code.py  output.txt
shader/: bunny_frag.glsl  bunny_vert.glsl  code.glsl  cow_frag.glsl  cow_vert.glsl  cube_frag.glsl  cube_vert.glsl  frag.glsl  light_frag.glsl  light_vert.glsl  sponza_frag.glsl  sponza_vert.glsl  vert.glsl
shader/shadow_mapping/: shadow_mapping.fs  shadow_mapping.vs
src/gl/: binning.cpp  binning.h  common.h  configs.h  formats.h  geometry.cpp  geometry.h  gl.cpp  gl.h  glcontext.cpp  glcontext.h  globj.cpp  globj.h  render.cpp  render.h  render_glsl.cpp  render_glsl.h
src/gl/glsl/: constants.h  grammar.y  inner_support.h  inner_variable.h  lex.yy.c  lexer.l  makefile  os.h  parse.c  parse.h  shader.hpp  symbols.cpp  symbols.h  texture.cpp  texture.h  translate.cpp  translate.h  vec_math.h  y.output  y.tab.c  y.tab.h
src/glView/: glV.h  visualize.h
src/glv/: glv.cpp  glv.h  internal.cpp  internal.h
src/include/GLV/: glv.h
src/src/GL/: internal.h
src/src/GLV/: internal.h
src/utests/: README.md  benchmark_prog_pipeline.cpp  test_binning.cpp  test_globjs.cpp  test_glsl.cpp  test_pipeline.cpp  test_sampler2D_type.cpp
src/utests/header_assimp/: configs.h  mesh.h  model.h  shader.h
src/utils/: id.cpp  id.h
tests/: OBJ_Loader.h  basic_lib_usage.cpp  benchmark.cpp  lib_benchmark.cpp  shared_data.cpp  shared_data.h  test_basics.cpp  test_bunny.cpp  test_cow.cpp  test_ebo.cpp  test_gen_bind.cpp  test_prog_basics.cpp  test_prog_bunny.cpp  test_prog_cow.cpp  test_prog_cube.cpp  test_prog_ppl.cpp  test_prog_sponza.cpp  test_prog_sponza_texture.cpp  test_programmable_basics.cpp  test_programmable_ppl.cpp  test_shadow_mapping.cpp  test_sponza.cpp  test_texture.cpp
tests/header/: mesh.h  model.h  shader.h
tests/header_assimp/: camera.h  configs.h  mesh.h  model.h  shader.h
